# structure-factory

./: .gitignore  AGENTS.md  BIOSAFETY.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  NON_CLAIMS.md  PUBLIC_RELEASE.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  sidecar.yaml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  campaign-request.yml  config.yml
.github/workflows/: ci.yml
campaigns/: README.md
campaigns/cryoem-raw-to-atomic-dossier/: README.md  issue-dag.md
campaigns/cryoem-raw-to-atomic-report/: README.md  issue-dag.md
campaigns/model-comparison/: README.md
campaigns/model-jury/: README.md
campaigns/pd-l1-pd1-binder-design/: README.md  rfdiffusion_hotspots.json  sequences.json  target_window.json  target_window_dossier.json
campaigns/publishable-figure-dossier/: README.md
containers/: README.md
demos/: README.md
docs/: agent-recipes.md  agent-run-learnings.md  agentic-biology-harness.md  ai-design-runtime-readiness.md  architecture.md  capabilities.md  claim-and-evidence.md  cli-reference.md  compute-backends.md  confidence-sidecars.md  faq.md  genie3-boltz-demo-ideas.md  glossary.md  install-sidecar.md  intake-interview.md  io-gap-and-mainline-plan.md  linear-orchestration.md  no-false-success-hardening.md  operational-gotchas.md  preflight-checklist.md  prep-roadmap.md  privacy-and-security-model.md  public-export-shape.md  public-repo-and-private-image-policy.md  public-switch-checklist.md  quickstart-tour.md  release-process.md  result-boundaries.md  runpod-stack.md  screening-superpowers.md  sidecar-architecture.md  skill-install.md  standalone-agent-workflow.md  tool-and-skill-radar.md  tooling-and-licensing.md  use-cases.md  workflow-map.md
examples/: README.md
internal/: README.md
modules/: README.md
packs/: README.md
recipes/: README.md  map-model-dossier-public-data.md  pd-l1-binder-design-fast-path.md  runpod-no-download-smoke.md  screening-superpowers-local-fixture.md  structure-mapping-public-data.md
references/: agent-handoff.md  artifact-contract.md  repo-registry-entry.yaml  software-registry.yaml  structure-factory.WORKFLOW.template.md  validation-gates.md
runpod/: README.md  network-volume-layout.md  pod-env.schema.json
schemas/: README.md  campaign-manifest.schema.json
scripts/: install-codex-skill.sh
skills/: README.md
templates/: artifact-pull-report.json  derived-evidence-bundle.json  github-issue.md  linear-issue.md  operator-gate-record.md  operator-wave-runbook.md
tests/: test_provider_closeout_check.py  test_public_cli.py  test_public_doc_references.py  test_repo_health.py
tools/: README.md  baker-miniprotein-gpcr.md  bindcraft.md  bioemu.md  boltz.md  boltzgen.md  chai.md  chimerax-onboarding.md  chimerax-peptide-viz.md  cofold-scoring-stack.md  cosine.md  domino.md  esmfold2-binder-controls.md  esmfold2.md  evobind.md  gcgr-target-prep.md  genie3-peptides.md  helixdiff.md  molpal.md  molviewspec.md  pepglad.md  placer.md  posebusters.md  proteinmpnn.md  refinement-stack.md  rfdiffusion3.md  rfpeptides.md  switchcraft.md
(+303 files in other folders)
