[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "biosymphony-structure-factory"
version = "0.1.0a0"
description = "Public-safe Symphony add-on for structural biology campaign planning, binder-design triage, stage contracts, and claim-bounded evidence."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "BioSymphony contributors" }]
keywords = [
  "structural-biology",
  "protein-design",
  "binder-design",
  "cryo-em",
  "runpod",
  "linear",
  "symphony",
  "agentic-ai",
  "evidence",
  "provenance",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/BioSymphony/biosymphony-structure-factory-public"
Repository = "https://github.com/BioSymphony/biosymphony-structure-factory-public"
Issues = "https://github.com/BioSymphony/biosymphony-structure-factory-public/issues"

[project.scripts]
bsf = "biosymphony_structure_factory.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
